[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/UI/UITheme.tres" type="Theme" id=1]
[ext_resource path="res://src/UI/UI.gd" type="Script" id=2]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SideBar" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="SideBar"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.317647, 0.109804, 0.109804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionButtons" type="VBoxContainer" parent="SideBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.0
margin_top = -35.0
margin_right = 47.0
margin_bottom = 35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionOne" type="Button" parent="SideBar/SelectionButtons"]
margin_right = 94.0
margin_bottom = 33.0
theme = ExtResource( 1 )
text = "Sel 1"

[node name="SelectionTwo" type="Button" parent="SideBar/SelectionButtons"]
margin_top = 37.0
margin_right = 94.0
margin_bottom = 70.0
theme = ExtResource( 1 )
text = "Sel 1"

[node name="BottomBar" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -64.0

[node name="ColorRect" type="ColorRect" parent="BottomBar"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.113725, 0.113725, 0.113725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="BottomBar"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -18.0
margin_right = -28.0
margin_bottom = 19.0
theme = ExtResource( 1 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="SideBar/SelectionButtons/SelectionOne" to="." method="_on_SelectionOne_pressed"]
[connection signal="pressed" from="SideBar/SelectionButtons/SelectionTwo" to="." method="_on_SelectionTwo_pressed"]
[connection signal="pressed" from="BottomBar/Button" to="." method="_on_Button_pressed"]
